--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
     - wget https://raw.github.com/benbalter/wordpress-plugin-tests/setup/setup.sh
     - source setup.sh
 
-script: phpunit
+script: phpunit -c test
 
 # wordpress-plugin-tests specific config
 # Tells Travis CI not to run unit tests against the setup branch
