--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,16 @@ env:
     - WP_VERSION=3.5 WP_MULTISITE=0
     - WP_VERSION=3.4.2 WP_MULTISITE=0
     - WP_VERSION=3.3.3 WP_MULTISITE=0
+    - WP_VERSION=3.2.1 WP_MULTISITE=0
+    - WP_VERSION=3.1.4 WP_MULTISITE=0
+    - WP_VERSION=3.0.6 WP_MULTISITE=0
     - WP_VERSION=master WP_MULTISITE=1
     - WP_VERSION=3.5 WP_MULTISITE=1
     - WP_VERSION=3.4.2 WP_MULTISITE=1
     - WP_VERSION=3.3.3 WP_MULTISITE=1
+    - WP_VERSION=3.2.1 WP_MULTISITE=1
+    - WP_VERSION=3.1.4 WP_MULTISITE=1
+    - WP_VERSION=3.0.6 WP_MULTISITE=1
 
 # Setup test environment
 before_script:
