--- a/phpdoc.xml.dist
+++ b/phpdoc.xml.dist
@@ -8,8 +8,6 @@
 		<target>docs</target>
 	</transformer>
 	<files>
-		<directory>.</directory>
-		<ignore>test/*</ignore>
-		<ignore>tests/*</ignore>
+        <directory>src</directory>
 	</files>
 </phpdoc>
