Increase memory limit to 64MB for travis builds (cherry picked from commit b1f6291)

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ env:
 
 # Setup test environment
 before_script:
+    - phpenv config-add travis.php.ini
     - source test/setup.sh
 
 script: phpunit -c test
